--- a/i3/config
+++ b/i3/config
@@ -1,37 +1,40 @@
-# i3 config file (v4)
+# Felix's i3 config file
 
-# Feh wallpaper config
-exec_always --no-startup-id feh --bg-scale /home/felix/Pictures/wallpapers/1.jpg
-
-# Bind Mod
+# Set Mod Key
 set $mod Mod4
 
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
-font pango:monospace 10
+# Primary Font 
+font pango:terminus 11
 
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
+# Start XDG autostart .desktop files using dex. See also
+# https://wiki.archlinux.org/index.php/XDG_Autostart
+exec --no-startup-id dex --autostart --environment i3
 
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn’t scale on retina/hidpi displays.
+# The combination of xss-lock, nm-applet and pactl is a popular choice, so
+# they are included here as an example. Modify as you see fit.
+
+# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
+# screen before suspend. Use loginctl lock-session to lock your screen.
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+
+# Launch NetworkManager
+exec --no-startup-id nm-applet
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-# start a terminal
-bindsym $mod+Return exec termite
+# move tiling windows via drag & drop by left-clicking into the title bar,
+# or left-clicking anywhere into the window while holding the floating modifier.
+tiling_drag modifier titlebar
 
-# kill focused window
+# Terminal Bind
+bindsym $mod+Return exec gnome-terminal 
+
+# Window Kill Bind
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+# Dmenu Bind 
+bindsym $mod+d exec --no-startup-id "dmenu_run -nf '#FFFFFF' -nb '#292929' -sb '#606060' -sf '#FFFFFF' -fn 'terminus-11' -p 'Search:'"
 
 # change focus
 bindsym $mod+j focus left
@@ -57,13 +60,13 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
-# split in horizontal orientation
+# Split Horizontal Orientation Bind
 bindsym $mod+h split h
 
-# split in vertical orientation
+# Split Vertical Orientation Bind
 bindsym $mod+v split v
 
-# enter fullscreen mode for the focused container
+# Fullscreen Window Bind
 bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
@@ -80,8 +83,10 @@ bindsym $mod+space focus mode_toggle
 # focus the parent container
 bindsym $mod+a focus parent
 
-# Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
+# focus the child container
+#bindsym $mod+d focus child
+
+# Workspace Name Config 
 set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
@@ -93,39 +98,42 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
-# switch to workspace
-bindsym $mod+1 workspace $ws1
-bindsym $mod+2 workspace $ws2
-bindsym $mod+3 workspace $ws3
-bindsym $mod+4 workspace $ws4
-bindsym $mod+5 workspace $ws5
-bindsym $mod+6 workspace $ws6
-bindsym $mod+7 workspace $ws7
-bindsym $mod+8 workspace $ws8
-bindsym $mod+9 workspace $ws9
-bindsym $mod+0 workspace $ws10
+# Workspace Binds 
+bindsym $mod+1 workspace number $ws1
+bindsym $mod+2 workspace number $ws2
+bindsym $mod+3 workspace number $ws3
+bindsym $mod+4 workspace number $ws4
+bindsym $mod+5 workspace number $ws5
+bindsym $mod+6 workspace number $ws6
+bindsym $mod+7 workspace number $ws7
+bindsym $mod+8 workspace number $ws8
+bindsym $mod+9 workspace number $ws9
+bindsym $mod+0 workspace number $ws10
 
-# move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace $ws1
-bindsym $mod+Shift+2 move container to workspace $ws2
-bindsym $mod+Shift+3 move container to workspace $ws3
-bindsym $mod+Shift+4 move container to workspace $ws4
-bindsym $mod+Shift+5 move container to workspace $ws5
-bindsym $mod+Shift+6 move container to workspace $ws6
-bindsym $mod+Shift+7 move container to workspace $ws7
-bindsym $mod+Shift+8 move container to workspace $ws8
-bindsym $mod+Shift+9 move container to workspace $ws9
-bindsym $mod+Shift+0 move container to workspace $ws10
+# Move To Workspace Binds
+bindsym $mod+Shift+1 move container to workspace number $ws1
+bindsym $mod+Shift+2 move container to workspace number $ws2
+bindsym $mod+Shift+3 move container to workspace number $ws3
+bindsym $mod+Shift+4 move container to workspace number $ws4
+bindsym $mod+Shift+5 move container to workspace number $ws5
+bindsym $mod+Shift+6 move container to workspace number $ws6
+bindsym $mod+Shift+7 move container to workspace number $ws7
+bindsym $mod+Shift+8 move container to workspace number $ws8
+bindsym $mod+Shift+9 move container to workspace number $ws9
+bindsym $mod+Shift+0 move container to workspace number $ws10
 
-# Reload the configuration file
+# Reload i3 Config Bind
 bindsym $mod+Shift+c reload
-# Restart i3
-bindsym $mod+Shift+r restart
-# Logout bind
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Do you really want to exit i3?' -B 'Yes, exit i3' 'i3-msg exit'"
 
-# Resize binds
+# Restart i3 Bind 
+bindsym $mod+Shift+r restart
+
+# Exit i3 Bind
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+
+# Window Resize Binds 
 mode "resize" {
+        # These bindings trigger as soon as you enter the resize mode
         bindsym j resize shrink width 10 px or 10 ppt
         bindsym k resize grow height 10 px or 10 ppt
         bindsym l resize shrink height 10 px or 10 ppt
@@ -143,21 +151,46 @@ mode "resize" {
         bindsym $mod+r mode "default"
 }
 
-bar {
-	status_command /bin/bumblebee-status -m cpu memory battery time pasink pasource -p time.format="%H:%M" -t greyish-powerline
-}
-
+# Window Resize Mode Bind
 bindsym $mod+r mode "resize"
 
-###############################################################################################################
-########################################### USER CONFIG #######################################################
+# Launch i3status 
+bar {
+        status_command i3status
+	colors {
+    		background #292929
+    		statusline #FFFFFF
+    		separator  #888888
+
+    		focused_workspace  #FFFFFF #292929 #FFFFFF
+    		active_workspace   #333333 #222222 #FFFFFF
+    		inactive_workspace #333333 #222222 #888888
+    		urgent_workspace   #2F343A #900000 #FFFFFF
+    		binding_mode       #2F343A #900000 #FFFFFF
+  	}
+}
+
+# Launch Feh
+exec_always --no-startup-id feh --bg-scale /home/felix/Pictures/1.jpg
+
+# Launch Picom
+exec_always --no-startup-id picom --config ~/.config/picom/picom.conf
+
+# Backlight Binds 
+bindsym XF86MonBrightnessUp   exec --no-startup-id brightnessctl s +1000
+bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl s 1000-
+
+# Volume Binds
+bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master 5%+ unmute && killall -USR1 i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id amixer set Master 5%- unmute && killall -USR1 i3status
+bindsym XF86AudioMute        exec --no-startup-id amixer set Master toggle && killall -USR1 i3status
 
 # Gaps Config
 gaps inner 10
 gaps outer 6
 
-# i3 Border config
-for_window [class="^.*"] border pixel 0
+# Window Border Config
+for_window [class="^.*"] border pixel 1
 # class                 border  bground text    indicator child_border
 client.focused          #dcdccc #FFFFFF #FFFFFF #F4F4F4   #dcdccc
 client.focused_inactive #dcdccc #FFFFFF #FFFFFF #FFFFFF   #dcdccc
@@ -165,21 +198,3 @@ client.unfocused        #dcdccc #FFFFFF #FFFFFF #FFFFFF   #dcdccc
 client.urgent           #dcdccc #900000 #FFFFFF #900000   #900000
 client.placeholder      #dcdccc #FFFFFF #FFFFFF #FFFFFF   #dcdccc
 client.background       #FFFFFF
-
-# Volume binds
-bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master 2%+ unmute
-bindsym XF86AudioLowerVolume exec --no-startup-id amixer set Master 2%- unmute
-bindsym XF86AudioMute        exec --no-startup-id amixer set Master toggle
-
-# Brightness binds
-bindsym XF86MonBrightnessUp   exec --no-startup-id xbacklight -inc 10
-bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 10
-
-# Bumblebee
-
-
-# Compton exec
-exec_always --no-startup-id compton --config $HOME/.config/compton/compton.conf
-
-# NM-Applet
-exec_always --no-startup-id nm-applet 
